Personal menu wrapping fix.

--- a/src/ututi/public/stylesheets/style.css
+++ b/src/ututi/public/stylesheets/style.css
@@ -250,7 +250,6 @@ ul.bullets_large li {
   position: relative;
   font-weight: bold;
   white-space: nowrap;
-  overflow: hidden;
 }
 
 #personal-menu span.title {
